# mkr_common

./: CMakeLists.txt
src/common/: comparators.h  concepts.h  family.h  singleton.h  type_id.h  uuid.h
test/: CMakeLists.txt
test/ut/: type_id_test.cpp  uuid_test.cpp
